[package]
name = "boxingtimer"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
gloo = "0.11.0"
serde = "1.0.136"
serde_urlencoded = "0.7.1"
wasm-bindgen-futures = "0.4.29"
lenient_bool = "0.1.1"
yew = { version = "0.21.0", features = ["csr"] }
derive_more = "0.99.17"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "Document",
    "HtmlDocument",
    "Location",
    "Window",
    "Url",
    "Element",
    "HtmlAudioElement"
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
must_use_candidate = "allow"
missing_errors_doc = "allow"
